--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@mui/material": "^5.16.6",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "jquery": "^3.7.1",
@@ -36,6 +37,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "sass-embedded": "^1.77.8",
     "vite": "^5.3.4"
   }
 }
