--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,10 @@
     "@mdi/react": "^1.6.1",
     "@mui/material": "^5.16.6",
     "axios": "^1.7.2",
-    "date-fns": "^3.6.0",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
+    "pdfmake": "^0.2.10",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.1",
     "react-collapse": "^5.1.1",
