--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mdi/react": "^1.6.1",
     "@mui/material": "^5.16.6",
     "axios": "^1.7.2",
+    "html2pdf.js": "^0.10.2",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
