--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,17 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@mui/material": "^5.16.6",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "html2pdf.js": "^0.10.2",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "notistack": "^3.0.1",
     "pdfmake": "^0.2.10",
     "react": "^18.3.1",
-    "react-big-calendar": "^1.13.1",
+    "react-big-calendar": "^1.13.2",
+    "react-bootstrap": "^2.10.4",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
