--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
+    "@mdi/light-js": "^0.2.63",
     "@mdi/react": "^1.6.1",
     "@mui/material": "^5.16.6",
     "aos": "^2.3.4",
