--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.16.6",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "counterup2": "^2.0.2",
     "html2pdf.js": "^0.10.2",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
@@ -32,7 +33,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-select": "^5.8.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "waypoints": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
